 * #1221: Add an "unsafe_skip_path_validation_before_create" option to skip pre-backup safety
   validation so as to reduce backup times on large filesystems.
 * #1224: When running an "extract" check with the "--progress" flag, show file extraction progress.
 * #1225: Improve performance and greatly reduce memory usage during pre-backup safety validation on
   large filesystems.
 * #1234: Fix for the ntfy monitoring hook erroring on emojis in the "title" option.
 * When syslog verbosity is enabled, log to systemd's journal (if present) with
   structured data. See the documentation for more information:
   https://torsion.org/borgmatic/reference/command-line/logging/#systemd-journal
 * SECURITY: Prevent shell injection attacks via constant interpolation in command hooks. (This was
   already implemented for deprecated "before_*"/"after_*" command hooks.)
 * Fix for an error in the "key import" action when importing a key from stdin.
 * Fix the "recreate" action to include borgmatic-specific paths (database dumps, etc.) in recreated
   archives.
 * Update the "list" action to support the "--json" flag when the "--archive" flag is also used.
 * Promote the ZFS, LVM, and Btrfs hooks from beta features to stable.

2.0.13
 * #1054: Allow the Btrfs hook to create and delete snapshots even when running
   as a non-root user. See the documentation for more information:
   https://torsion.org/borgmatic/reference/configuration/data-sources/btrfs/#non-root-user
 * #1179: Add a "file_list_format" option for setting the "list" action's output format and an
   "archive_list_format" option for setting the "repo-list" action's format.
 * #1192: Fix for over-aggressive deduplication of source directories that contain the borgmatic
   runtime directory, potentially resulting in data loss (data not getting backed up) when
   snapshotting these source directories.
 * #1192, #1163: Document potential interactions between security settings in borgmatic's sample